cabal-version:       2.2

name:                hasmtlib
version:             0.1.0.0
homepage:            https://github.com/bruderj15/Hasmtlib
license:             BSD-3-Clause
license-file:        LICENSE
author:              Julian Bruder
maintainer:          julian.bruder@outlook.com
copyright:           2024 Julian Bruder
category:            SMT
build-type:          Simple
extra-source-files:  README.md

executable hasmtlib
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    GHC2021
  default-extensions:  DataKinds, GADTs, TypeFamilies


  build-depends:       base
                     , containers
                     , mtl
                     , lens
                     , data-default
                     , text
                     , bytestring
                     , attoparsec
                     , atto-lisp
                     , smtlib-backends
                     , smtlib-backends-process

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-type-defaults
