cabal-version:       2.2

name:                hasmtlib
version:             0.1.0.0
homepage:            https://github.com/bruderj15/Hasmtlib
license:             BSD-3-Clause
license-file:        LICENSE
author:              Julian Bruder
maintainer:          julian.bruder@outlook.com
copyright:           2024 Julian Bruder
category:            SMT
build-type:          Simple
extra-source-files:  README.md

tested-with: GHC == 9.6.5

library
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  DataKinds, GADTs, TypeFamilies, OverloadedStrings

  exposed-modules:     Language.Hasmtlib
                     , Language.Hasmtlib.Codec
                     , Language.Hasmtlib.Boolean
                     , Language.Hasmtlib.Equatable
                     , Language.Hasmtlib.Orderable
                     , Language.Hasmtlib.Internal.Parser
                     , Language.Hasmtlib.Solver.Common
                     , Language.Hasmtlib.Solver.CVC5
                     , Language.Hasmtlib.Solver.MatHSAT
                     , Language.Hasmtlib.Solver.Yices
                     , Language.Hasmtlib.Solver.Z3
                     , Language.Hasmtlib.Type.Expr
                     , Language.Hasmtlib.Type.SMT
                     , Language.Hasmtlib.Type.Solution
                     , Language.Hasmtlib.Type.Solver

  other-modules:       Language.Hasmtlib.Internal.Expr

  build-depends:       base
                     , containers
                     , mtl
                     , lens
                     , data-default
                     , text
                     , bytestring
                     , attoparsec
                     , atto-lisp
                     , smtlib-backends
                     , smtlib-backends-process

  ghc-options:       -O2
                     -Wall
                     -Wcompat
                     -Widentities
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wpartial-fields
                     -Wredundant-constraints
                     -Wno-type-defaults
