cabal-version:       2.2

name:                hasmtlib
version:             0.1.0.0
synopsis:            A monad for interfacing with external SMT solvers
description:         A monad for interfacing with external SMT solvers
homepage:            https://github.com/bruderj15/Hasmtlib
license:             BSD-3-Clause
license-file:        LICENSE
author:              Julian Bruder
maintainer:          julian.bruder@outlook.com
copyright:           2024 Julian Bruder
category:            SMT
build-type:          Simple
extra-source-files:  README.md

tested-with: GHC == 9.6.5

library
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  DataKinds, GADTs, TypeFamilies, OverloadedStrings

  exposed-modules:     Language.Hasmtlib
                     , Language.Hasmtlib.Codec
                     , Language.Hasmtlib.Iteable
                     , Language.Hasmtlib.Boolean
                     , Language.Hasmtlib.Variable
                     , Language.Hasmtlib.Equatable
                     , Language.Hasmtlib.Orderable
                     , Language.Hasmtlib.Internal.Parser
                     , Language.Hasmtlib.Solver.Common
                     , Language.Hasmtlib.Solver.CVC5
                     , Language.Hasmtlib.Solver.MathSAT
                     , Language.Hasmtlib.Solver.Yices
                     , Language.Hasmtlib.Solver.Z3
                     , Language.Hasmtlib.Type.Expr
                     , Language.Hasmtlib.Type.SMT
                     , Language.Hasmtlib.Type.Solution
                     , Language.Hasmtlib.Type.Solver

  other-modules:       Language.Hasmtlib.Internal.Expr
                     , Language.Hasmtlib.Internal.Expr.Num
                     , Language.Hasmtlib.Internal.Render

  build-depends:       attoparsec                   >= 0.14.4 && < 0.15
                     , base                         >= 4.17.2 && < 5
                     , bytestring                   >= 0.11.5 && < 1
                     , containers                   >= 0.6.7  && < 1
                     , mtl                          >= 2.2.2  && < 3
                     , text                         >= 2.0.2  && < 3
                     , data-default                 >= 0.7.1  && < 1
                     , lens                         >= 5      && < 6
                     , smtlib-backends              >= 0.3    && < 1
                     , smtlib-backends-process      >= 0.3    && < 1
                     , utf8-string                  >= 1.0.2  && < 2


  ghc-options:       -O2
                     -Wall
                     -Wcompat
                     -Widentities
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wpartial-fields
                     -Wredundant-constraints
                     -Wno-type-defaults
                     -Wno-orphans
